# DinoisAwesome

./: .gitignore  CLAUDE.md  LICENSE  README.md  app.py  final.py  pyproject.toml  sam_service.py
annotationapp/: app.py  sam_service.py
annotationapp/static/css/: style.css
annotationapp/static/js/: mask_editor.js
annotationapp/templates/: index.html
basic_tutorials/: 01_encoder.py  02_gallery.py  03_foreground_head.py  04_anomaly_head.py  05_keypoint_head.py
dinoisawesome/: __init__.py  anomaly_head.py  encoder.py  foreground_head.py  gallery.py  instance_detection.py  keypoint_head.py  keypoint_localization.py
experiments/: eval_coarse_to_fine_alignment.py  eval_custom_slim.py  high_res_tiling.py  instance_detection.py  keypoint_matching.py  patch_clustering.py
notebooks/: eval_custom_slim.ipynb  instance_detection.ipynb  keypoint_matching.ipynb  patch_clustering.ipynb
scripts/: eval_custom_slim.py  eval_sam_dino.py  extract_sam_masks.py  multiscale_detection.py  score_dino.py  script.py  tutorial.py
static/css/: style.css
static/js/: mask_editor.js
templates/: index.html
tests/: test_instance_detection.py
