[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dinoisawesome"
version = "0.1.0"
description = "Fun experiments with DINO encoders (v2 / v3)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "torchvision>=0.16",
    "Pillow>=10.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
xpu = [
    "intel-extension-for-pytorch",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dinoisawesome*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
